--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,10 +1,10 @@
 body {
     background-color: black;
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 h1 {
-    font-family: Verdana;
     font-weight: normal;
     font-size: 50px;
     color: white;
@@ -12,13 +12,11 @@ h1 {
 }
 
 h2 {
-    font-family: verdana;
     font-weight: 300;
     font-size: 42px;
 }
 
 p {
-    font-family: Verdana;
     font-size: 21px;
     color: gray;
 }
